# openprecincts-web

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  Dockerfile  Pipfile  README.md  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  setup.cfg  webpack.common.js  webpack.config.js
accounts/: admin.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20190521_1843.py  0003_userprofile_contact_me.py
accounts/tests/: test_account_views.py
ansible/: deploy.sh  openprecincts.yml  requirements.yml
ansible/inventory/: hosts
contact/: admin.py  models.py  urls.py  views.py
contact/migrations/: 0001_initial.py  0002_emailmessage.py  0003_emailmessage_state.py  0004_auto_20190315_1617.py  0005_auto_20190315_1804.py  0006_auto_20190315_1935.py  0007_auto_20190315_2208.py
contact/tests/: test_bulk_email.py  test_incoming_email.py
core/: admin.py  models.py  permissions.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_auto_20190201_1848.py  0002_load_data.py  0003_auto_20190204_2142.py  0003_auto_20190219_0042.py  0004_add_file_model.py  0004_statecycle.py  0005_auto_20190206_1747.py  0005_auto_20190411_1927.py  0006_election_electionresult.py  0007_electionresult_county_name.py  0020_statereport.py  (+16 more)
docker/: docker-db.sh
files/: admin.py  models.py  tasks.py  urls.py  utils.py  views.py
js/: index.js  state-map.js
openprecincts_web/: celery.py  settings.py  test_settings.py  urls.py  wsgi.py
templates/: _task_status.html  base.html  base_form.html  zip_readme.txt
(+93 files in other folders)
